# beeref

./: .gitignore  .pdm-python  BeeRef.spec  CHANGES.md  CODE_REVIEW.md  CODE_REVIEW_UPDATED.md  FINAL_SUMMARY.md  GIT_SYNC_FIX.md  IMPLEMENTATION_SUMMARY.md  LOCALIZATION.md  REVIEW_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SETUP_COMPLETE.md  pyproject.toml  run_beeref.sh  run_beeref_dev.sh
beeref/: __init__.py  __main__.py  about_dialog.py  constants.py  gif_item.py  help_dialog.py  items.py  localization.py  scene.py  selection.py  styles.py  view.py  widgets.py
beeref/actions/: actions.py  menu_structure.py  mixin.py
beeref/assets/: __init__.py
beeref/fileio/: __init__.py  image.py  sql.py
beeref/widgets/: __init__.py  color_gamut.py  color_picker.py  draw_floating_menu.py  floating_menu.py  gif_floating_menu.py  gif_frames_menu.py  image_floating_menu.py  text_floating_menu.py  titlebar.py  welcome_overlay.py
beeref/widgets/controls/: mouse.py
scripts/: translation_manager.py
tests/: test_scene.py  test_view.py  test_widgets.py
tests/actions/: test_mixin.py
translations/: README.md  be.json  de.json  es.json  it.json  ru.json  template.json
