[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "pybadges>=3.0.0",
    # "pyinstaller>=5.9.0",  # Temporarily disabled for Python 3.13 compatibility
    "yamllint>=1.30.0",
    "coverage>=7.2.2",
    "httpretty>=1.1.4",
    "pytest>=7.2.2",
    "pytest-qt>=4.2.0",
    "coverage>=7.2.2",
    "psutil>=5.9.4",
]

[project]
name = "BeeRef"
version = "0.3.1"
description = "A simple reference image viewer"
readme = "README.rst"
authors = [
    {name = "Rebecca Breu", email = "rebecca@rbreu.de"},
    {name = "mini-ninja-64", email = "github@callumh.art"},
]
dependencies = [
    "exif>=1.6.1",
    "pyQt6-Qt6>=6.9.2",
    "pyQt6>=6.9.1",
]
license = {text = "LICENSE"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/rbreu/beeref"

[project.gui-scripts]
beeref = "beeref.__main__:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
